hw1/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kia-service
spec:
  selector:
    app: kia-hw1
  ports:
    - protocol: TCP
      port: 9000
      targetPort: web
  type: NodePort
